# TranslatorBot

./: .env.example  .gitignore  bot.py  pyproject.toml  utils.py
cogs/: drive.py  events.py  translator.py
database/: database.sqlite3  schema.sql
