[tool.poetry]
name = "translatorbot"
version = "0.1.0"
description = ""
authors = ["beerpiss <lacvtg.a1.2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.2.2"
googletrans = "3.1.0a0"
python-dotenv = "^1.0.0"
langcodes = "^3.3.0"
language-data = "^1.1"
lingua-language-detector = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
